name:                 cis194
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Peter Nguyen
maintainer:           peter.hieu.nguyen@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      HW1.Luhn
                      , HW1.Hanoi
  build-depends:        base >= 4.7 && < 5
  ghc-options:          -Wall
  default-language:     Haskell2010

--executable luhn
--  main-is:              Luhn.hs
--  -- other-modules:
--  -- other-extensions:
--  build-depends:        base
--  hs-source-dirs:       src
--  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
--  default-language:     Haskell2010

test-suite spec
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , hspec
                      , cis194
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
